--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dulwich = "^0.21.7"
 exceptiongroup = "^1.2.0"
 jinja2 = "^3.1.3"
 pickleshare = "^0.7.5"
-setuptools = "^69.0.3"
+setuptools = "70.0.0"
 wheel = "^0.42.0"
 sphinx = "^7.2.6"
 sphinx-press-theme = "^0.8.0"
