--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ plotly = "^5.20.0"
 google-generativeai = "^0.5.0"
 matplotlib = "^3.8.4"
 seaborn = "^0.13.2"
+maidr = "^0.8.0"
 
 [tool.poetry.scripts]
 "VizAble.run_app" = "VizAble.app:main"
